--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"problems.txt\",'a',encoding='utf-8') as f:\n",
+    "    f.write('9469\\t폰 노이만\\thttps://www.acmicpc.net/problem/9469\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -32,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -58,7 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pre_url = 'https://www.acmicpc.net/user/ksd1222'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -68,10 +91,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.acmicpc.net/problemset/130'"
+       "'https://www.acmicpc.net/user/ksd1222'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -97,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -105,7 +128,141 @@
    },
    "outputs": [],
    "source": [
-    "table = soup.find_all(id=\"problemset\")"
+    "table = soup.find_all(class_=\"panel-body\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2902'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table[0].find_all(class_=\"problem_number\")[0].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "current_problem = open(\"problems.txt\", 'r').readlines()[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9469\\n'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "z = ['hi','bye']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "d = dict.fromkeys(z, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bye': 0, 'hi': 0}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "problem = table[0].find_all(class_=\"problem_number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2902\n",
+      "3090\n",
+      "5598\n",
+      "9469\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(problem)):\n",
+    "    ids = problem[i].text\n",
+    "    print(ids)"
    ]
   },
   {
@@ -325,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -375,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -386,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
@@ -397,7 +554,7 @@
        "[4, 2, 3, 7, 6]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
@@ -419,32 +576,18 @@
     "    T = []\n",
     "    for i in range(len(seq)):\n",
     "\n",
-    "        if i == 0:\n",
-    "            T.append(abs(seq[i]-seq[i+1]))\n",
-    "        elif i == len(seq)-1:\n",
-    "            T.append(abs(seq[i-1]-seq[i]))\n",
+    "        if i == len(seq)-1:\n",
+    "            break\n",
     "        else:\n",
-    "            left = abs(seq[i-1]-seq[i])\n",
-    "            right = abs(seq[i+1]-seq[i])\n",
-    "            T.append(max(left,right))\n",
+    "            diff = abs(seq[i+1]-seq[i])\n",
+    "            T.append(diff)\n",
     "\n",
     "    return T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "seq = [4, 2, 3, 7, 6]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -452,10 +595,10 @@
     {
      "data": {
       "text/plain": [
-       "[2, 2, 4, 4, 1]"
+       "[2, 1, 4, 1]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +609,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 130,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "table=[max(maxMargin(seq))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4]"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -475,31 +662,94 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 2, 2, 7, 6]\n",
-      "[4, 2, 1, 7, 6]\n",
-      "[4, 2, 0, 7, 6]\n",
-      "[4, 2, 0, 6, 6]\n",
-      "[4, 2, 0, 5, 6]\n"
+      "[4, 2, 3, 7, 6] [3, 2, 3, 7, 6]\n",
+      "[4, 2, 3, 7, 6] [4, 1, 3, 7, 6]\n",
+      "[4, 2, 3, 7, 6] [4, 2, 2, 7, 6]\n",
+      "[4, 2, 3, 7, 6] [4, 2, 3, 6, 6]\n",
+      "[4, 2, 3, 7, 6] [4, 2, 3, 7, 5]\n",
+      "[4, 2, 3, 6, 6] [3, 2, 3, 6, 6]\n",
+      "[4, 2, 3, 6, 6] [4, 1, 3, 6, 6]\n",
+      "[4, 2, 3, 6, 6] [4, 2, 2, 6, 6]\n",
+      "[4, 2, 3, 6, 6] [4, 2, 3, 5, 6]\n",
+      "[4, 2, 3, 6, 6] [4, 2, 3, 6, 5]\n",
+      "[4, 2, 3, 5, 6] [3, 2, 3, 5, 6]\n",
+      "[4, 2, 3, 5, 6] [4, 1, 3, 5, 6]\n",
+      "[4, 2, 3, 5, 6] [4, 2, 2, 5, 6]\n",
+      "[4, 2, 3, 5, 6] [4, 2, 3, 4, 6]\n",
+      "[4, 2, 3, 5, 6] [4, 2, 3, 5, 5]\n",
+      "[3, 2, 3, 5, 6] [2, 2, 3, 5, 6]\n",
+      "[3, 2, 3, 5, 6] [3, 1, 3, 5, 6]\n",
+      "[3, 2, 3, 5, 6] [3, 2, 2, 5, 6]\n",
+      "[3, 2, 3, 5, 6] [3, 2, 3, 4, 6]\n",
+      "[3, 2, 3, 5, 6] [3, 2, 3, 5, 5]\n",
+      "[2, 2, 3, 5, 6] [1, 2, 3, 5, 6]\n",
+      "[2, 2, 3, 5, 6] [2, 1, 3, 5, 6]\n",
+      "[2, 2, 3, 5, 6] [2, 2, 2, 5, 6]\n",
+      "[2, 2, 3, 5, 6] [2, 2, 3, 4, 6]\n",
+      "[2, 2, 3, 5, 6] [2, 2, 3, 5, 5]\n"
      ]
     }
    ],
    "source": [
-    "for _ in range(limit):\n",
+    "for j in range(limit):\n",
+    "    minim = 100000\n",
+    "    index = -1\n",
     "    margin_seq = maxMargin(seq)\n",
-    "    max_var_idx = seq.index(max(seq))\n",
+    "    count = margin_seq.count(table[j-1])\n",
     "    \n",
-    "    if seq[max_var_idx] == max(margin_seq):\n",
-    "        seq[max_var_idx]-=1\n",
+    "    if count == 1:\n",
+    "        max_var_idx = margin_seq.index(table[j-1])\n",
+    "        if seq[max_var_idx] > seq[max_var_idx+1] and seq[max_var_idx] > 2:\n",
+    "            seq[max_var_idx]-=1\n",
+    "        elif seq[max_var_idx] < seq[max_var_idx+1] and seq[max_var_idx+1] > 2:\n",
+    "            seq[max_var_idx+1]-=1\n",
+    "    \n",
     "    else:\n",
-    "        max_margin_idx = margin_seq.index(max(maxMargin(seq)))\n",
-    "        seq[max_margin_idx]-=1\n",
+    "        for i in range(len(margin_seq)):\n",
+    "            \n",
+    "            if margin_seq[i] == table[j-1]:\n",
+    "                temp = copy.deepcopy(seq)\n",
+    "                temp[i]-=1\n",
+    "                temp_max = max(maxMargin(temp))\n",
+    "                if temp_max <= table[j-1] and temp_max < minim:\n",
+    "                    index = i\n",
+    "                    minim = temp_max\n",
+    "            \n",
+    "             if index != -1:\n",
+    "        seq[index]-=1\n",
     "    \n",
-    "    print(seq)"
+    "   \n",
+    "\n",
+    "               \n",
+    "    table.append(max(maxMargin(seq)))\n",
+    "    \n",
+    "#     margin_seq = maxMargin(seq)\n",
+    "#     max_var_idx = margin_seq.index(max(margin_seq))\n",
+    "    \n",
+    "#     # 같은 마진으로 오름차순으로 있을 때 제일 큰 왼쪽 애를 줄여야 함..\n",
+    "    \n",
+    "#     count = margin_seq.count(max(margin_seq))\n",
+    "    \n",
+    "#     \n",
+    "    \n",
+    "#     else:\n",
+    "        \n",
+    "    \n",
+    "#     if max_var_idx != length-2 and margin_seq[max_var_idx] == margin_seq[max_var_idx+1]:\n",
+    "#         if seq[max_var_idx] > seq[max_var_idx+2] and seq[max_var_idx] > 2:\n",
+    "#             seq[max_var_idx]-=1\n",
+    "#         elif seq[max_var_idx] < seq[max_var_idx+2] and seq[max_var_idx+2] > 2:\n",
+    "#             seq[max_var_idx+2]-=1\n",
+    "#     else:\n",
+    "#         if seq[max_var_idx] > seq[max_var_idx+1] and seq[max_var_idx] > 2:\n",
+    "#             seq[max_var_idx]-=1\n",
+    "#         elif seq[max_var_idx] < seq[max_var_idx+1] and seq[max_var_idx+1] > 2:\n",
+    "#             seq[max_var_idx+1]-=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
@@ -507,10 +757,10 @@
     {
      "data": {
       "text/plain": [
-       "[2, 2, 5, 5, 1]"
+       "[1, 1, 2, 1]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false
    },
@@ -529,16 +779,37 @@
     {
      "data": {
       "text/plain": [
-       "[4, 2, 0, 5, 6]"
+       "[4, 3, 2, 2, 2, 2]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "seq"
+    "table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 5 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = ' '.join([str(s) for s in seq])\n",
+    "\n",
+    "print(answer)"
    ]
   },
   {
@@ -567,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
